styles/main.css
body {
	/* Setting the default text color, size, page background and a font stack: */
	font-size:1em;
	color:#fcfcfc;
	background-color:#145f7f;
	font-family:Arial, sans-serif;
	background-image: url(../images/CircuitBoard1.jpg);
	background-attachment: fixed;
	min-height: 100%;
	background-position: center;
	background-size: cover;
}




body {
	width: 100%;
	height: 100vh;
	background-color: #000;
	background-image: radial-gradient( circle at top right, rgba(121, 68, 154, 0.13), transparent ), radial-gradient(circle at 20% 80%, rgba(41, 196, 255, 0.13), transparent);
}

.canvasBackground {
	position: fixed;
	z-index: -1;
}

canvas {
	position: fixed;
	width: 100%;
	height: 100%;
}

	a:hover {
		color: #fff;
	}





/* Hyperlink Styles */
a, a:visited {
	color:#0196e3;
	text-decoration:none;
	outline:none;
}

a img {
	border:none;
}


/* Headings */
h1,h2,h3 {
	font-family:Arial,Sans-Serif;
	text-shadow:0 1px 1px black;
}

h1 {
	font-size:3.5em;
}

h2 {
	font-size:2.2em;
	font-weight:normal;
	letter-spacing:0.01em;
}

h3 {
	font-family: Arial,Sans-Serif;
	font-size: 1.8em;
	font-weight: normal;
	margin: 0;
}


/* Header styling */
header {
	position: fixed;
	top: 0;
	right: 0;
	left: 0;
	padding: 0.9em;
	padding-left: 1.5em;
	background-color: #212121;
	z-index: 1;
}


/* Main styling */
.splash {
	text-align: center;
	align-content: center;
	height: 100vh;
	-webkit-text-stroke-width: 1px;
	-webkit-text-stroke-color: black;
	font-size: 1.2em;
}

.aboutMe {
	background-color:#333333;
	margin: 0;
	padding: 30px;
	font-size: 1.2em;
}

.profilePicture {
	width: 150px;
	height: 150px;
	border-radius: 150px;
	border: .2px solid black;
}


/* Timeline styling */
.timelineLabel {
	text-align: center;
	margin: 0;
	padding: 1em;
}

.timeline {
	text-align: center;
	background-color: white;
	padding-top: 5em;
	padding-bottom: 1px;
}

.verticalLine {
	border-left: 6px solid black;
	height: 100%;
	position: absolute;
	left: 50%;
	margin-left: -3px;
}

.timelineElement {
	margin-top: 4em;
	margin-bottom: 4em;
	position: center;
}

.timelineElementIcon {
	width: 60px;
	height: 60px;
	left: 50%;
	margin-left: -30px;
	position: absolute;
	background-color: #333333;
	border-radius: 50%;
	box-shadow: 0px 3px 1px -2px rgba(0,0,0,.2),0px 2px 2px 0px rgba(0,0,0,.14),0px 1px 5px 0px rgba(0,0,0,.12);
}

.timelineElementContentContainer {
	width: 50%;
	padding-left: 2.5em;
}

.timelineElementContent {
	text-align: left;
	background-color: #333333;
	border-radius: 0.5em;
	padding: 1.6em;
	margin-right: 7em;
	margin-left: auto;
	max-width: 32em;
	box-shadow: 0px 3px 1px -2px rgba(0,0,0,.2),0px 2px 2px 0px rgba(0,0,0,.14),0px 1px 5px 0px rgba(0,0,0,.12);
}

.timelineDate {
	position: absolute;
	color: #333;
	border-color: black;
	margin-left: 3em;
	text-align: left;
	opacity: 0.8;
	padding-top: 1.2em;
	padding-bottom: 1.2em;
	font-size: large;
}

.timelineElement:nth-child(2n+1) .timelineElementContentContainer {
	padding-right: 2.5em;
	padding-left: 4.5em;
	margin-right: 0px;
	margin-left: 50%;
}

.timelineElement:nth-child(2n+1) .timelineElementContent {
	text-align: left;
	padding: 1.6em;
	margin-right: 7em;
	margin-left: 0;
	max-width: 32em;
	box-shadow: 0px 3px 1px -2px rgba(0,0,0,.2),0px 2px 2px 0px rgba(0,0,0,.14),0px 1px 5px 0px rgba(0,0,0,.12);
}

.timelineElement:nth-child(2n+1) .timelineDate {
	margin-right: 3em;
	text-align: right;
	float: left;
	left: auto;
	right: 50%;
}

@media only screen and (max-width: 850px) {
	.timelineElementContent, .timelineElement:nth-child(2n+1) .timelineElementContent {
	}

	.verticalLine {
		left: auto;
		right: 4em;
	}

	.timelineElementIcon {
		left: auto;
		right: 2.3em;
	}

	.timelineDate, .timelineElement:nth-child(2n+1) .timelineDate {
		left: auto;
		right: 7em;
		margin: 0;
	}

	.timelineElementContentContainer, .timelineElement:nth-child(2n+1) .timelineElementContentContainer {
		width: auto;
		padding: 0em;
		margin: 2em;
		margin-right: 10em;
	}
}

/*
figure {
	border: 3px solid #142830;
	float: right;
	height: 300px;
	margin-left: 15px;
	overflow: hidden;
	width: 500px;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
	border-radius: 10px;
}
*/

/* Footer styling */
footer {
	margin: 0px;
	text-align: left;
	font-size: 1.2em;
	bottom: 0;
	right: 0;
	left: 0;
	padding: 30px 120px 15px 120px;
}


footer p {
	position:relative;
	margin: 0px;
}

